<resources>
    <string name="app_name">ALRITE Android Client</string>
    <string name="organization_name" translatable="false">ALRITE</string>
    <string name="organization_description" translatable="false">Diagnose Quickly, Breathe Easy</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_location">Location</string>
    <string name="alphanumeric_postal_code">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 </string>
    <string name="login_button">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_location_select">Session Location</string>
    <string name="req_star"><![CDATA[<font color=\'#616161\'> * </font>]]></string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_lost_data_dialog">Changing the URL, username or password will erase all the data. Are you sure?</string>
    <string name="forgot_button_ok">Dismiss</string>
    <string name="login_offline">Offline</string>
    <string name="login_online">Online</string>
    <string name="login_error">Error with login</string>
    <string name="invalid_URL_message">Invalid URL</string>
    <string name="emptyerror">Required</string>
    <string name="fname_invalid_error">Given name cannot contain symbols or numbers</string>
    <string name="midname_invalid_error">Middle name cannot contain symbols or numbers</string>
    <string name="lname_invalid_error">Family name cannot contain symbols or numbers</string>
    <string name="dob_error">Date should be between %1$s and %2$s</string>
    <string name="reg_firstname_hint">First Name*</string>
    <string name="reg_midname_hint">Middle Name</string>
    <string name="reg_surname_hint">Family Name*</string>
    <string name="reg_ques_name">Patient\’s Name</string>
    <string name="reg_ques_gender">Patient\'s gender*</string>
    <string name="reg_ques_dob">Patient\'s birth date*</string>
    <string name="label_or">OR</string>
    <string name="reg_ques_address">Address</string>
    <string name="addr1_hint">Address Line 1*</string>
    <string name="addr2_hint">Address Line 2</string>
    <string name="addr_invalid_error">Address cannot contain invalid characters</string>
    <string name="atleastone">Fill at least one address field</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob_hint">Date of Birth (dd/MM/yyyy)</string>
    <string name="estyr">Estimated Years</string>
    <string name="estmonth">Estimated Months</string>
    <string name="age_out_of_bounds_message">Patient\'s age must be between 0 and %d</string>
    <string name="register_patient_error">Patient cannot be registered due to server error</string>
    <string name="update_patient_success">Patient %s updated</string>
    <string name="update_patient_error">Patient %s cannot be updated due to server error</string>
    <string name="offline_mode_unsupported_in_first_login">Offline mode is not supported during first login.Enable online mode and then try again.</string>
    <string name="login_offline_toast_message">You are now in offline mode.</string>
    <string name="auth_failed_dialog_message">Incorrect username or password entered. Please try again.</string>
    <string name="no_internet_conn_dialog_message">You have no internet connection.\nPlease check phone or Wi-Fi connection and signal strength and try again.</string>
    <string name="similar_patients_dialog_title">Similar patients found</string>
    <string name="logout_dialog_title">Logging out</string>
    <string name="logout_dialog_message">Are you sure you want to logout from OpenMRS client?</string>
    <string name="logout_dialog_button">Logout</string>
    <string name="credentials_changed_dialog_title">Credentials changed</string>
    <string name="credentials_changed_dialog_message">Your credentials have been changed in the web app. You are logged out automatically.</string>
    <string name="end_visit_dialog_title">End Visit</string>
    <string name="end_visit_dialog_message">Are you sure you want to end this visit?</string>
    <string name="start_visit_dialog_title">Start Visit</string>
    <string name="start_visit_dialog_message">Are you sure you want to start visit for %1$s now?</string>
    <string name="start_visit_unsuccessful_dialog_title">Visit didn\'t start.</string>
    <string name="start_visit_unsuccessful_dialog_message">There are already active visits of %1$s. Try synchronizing patient or closing previous visits</string>
    <string name="delete_patient_dialog_message">Are you sure you want to delete this patient?</string>
    <string name="location_dialog_title">Select Location</string>
    <string name="location_dialog_current_location">Current Location: </string>
    <string name="reset_dialog_message">All patient information entered will be erased</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_register_new">Register new</string>
    <string name="dialog_button_merge">Merge</string>
    <string name="action_next">Next</string>
    <string name="dialog_button_select_location">Select Location</string>
    <string name="settings_logs">Logs</string>
    <string name="settings_concepts_in_db">Concepts in DB:</string>
    <string name="settings_no_concepts_toast">There are no concepts in DB!</string>
    <string name="action_find_patients">Find Patients</string>
    <string name="action_synced_patients">Synced Patients</string>
    <string name="action_download_patients">Download Patients</string>
    <string name="search_patient_hint">Patient name</string>
    <string name="search_patient_no_results">No patients exist in database</string>
    <string name="search_patient_no_result_for_query">No results found for query \"%1$s\"</string>
    <string name="select_all_downloadable_data">Select all</string>
    <string name="download_selected_patient_data">Download Patient Data</string>
    <string name="download_multiple">Download Multiple</string>
    <string name="dashboard_search_icon_label">Find Patients</string>
    <string name="dashboard_registry_icon_label">Register Patient</string>
    <string name="dashboard_visits_icon_label">Active Visits</string>
    <string name="dashboard_forms_icon_label">Form Entry</string>
    <string name="dashboard_exit_toast_message">Please press BACK again to exit</string>
    <string name="dashboard_learn_message">Learn</string>
    <string name="action_learn">Learn</string>
    <string name="dashboard_patient_message">Patient Assessment</string>
    <string name="action_patient_assessment">Patient Assessment</string>
    <string name="find_patients_row_checkbox_download_label">Download</string>
    <string name="action_synchronize_patients">Synchronizing patient</string>
    <string name="action_update_patient_data">Update Patient</string>
    <string name="synchronize_patient_successful">Successfully synchronized patient data.</string>
    <string name="synchronize_patient_error">Synchronizing patient data was unsuccessful</string>
    <string name="synchronize_patient_network_error">Cannot synchronize in offline mode</string>
    <string name="delete_patient_successful">Patient deleted successfully</string>
    <string name="delete_patient_error">Error with deleting patient</string>
    <string name="get_patient_from_database_error">Failed to fetch patient from database</string>
    <string name="action_start_visit">Start visit</string>
    <string name="action_create_allergy">Create Allergy</string>
    <string name="patient_scroll_tab_details_label">Details</string>
    <string name="patient_scroll_tab_allergy_label">Allergy</string>
    <string name="patient_scroll_tab_diagnosis_label">Diagnosis</string>
    <string name="patient_scroll_tab_visits_label">Visits</string>
    <string name="patient_scroll_tab_vitals_label">Vitals</string>
    <string name="patient_scroll_tab_charts_label">Charts</string>
    <string name="download_started">"Downloading…"</string>
    <string name="action_starting_visit">"Starting Visit"</string>
    <string name="visit_start_error">Failed to start a visit</string>
    <string name="patient_update_successful">Patient %1$s Updated</string>
    <string name="patient_update_unsuccessful">Patient %1$s cannot be updated due to server error will retry sync</string>
    <string name="patient_photo_update_unsuccessful">Patient photo cannot be synced due to server error:  %1$s</string>
    <string name="patient_identifier"># %1$s</string>
    <string name="patient_details_photo_label">PATIENT\’S PHOTO</string>
    <string name="patient_details_birth_date_label">Birth date</string>
    <string name="patient_contact_info_label">Contact Information</string>
    <string name="patient_address_label">Address</string>
    <string name="patient_city_label">City</string>
    <string name="patient_postal_label">Postal Code</string>
    <string name="patient_state_label">State</string>
    <string name="patient_country_label">Country</string>
    <string name="date_picker_title">Select Date of Birth</string>
    <string name="action_active_visits">Active Visits</string>
    <string name="action_form_entry">Form Entry</string>
    <string name="action_find_visits">Find Active Visits</string>
    <string name="search_visits_no_results">No active visits in database</string>
    <string name="error_email_subject_app_crashed">OpenMRS android client crashed</string>
    <string name="choose_a_email_client">Choose an Email client :</string>
    <string name="no_internet_connection_message">No internet connection</string>
    <string name="activity_no_internet_connection">No internet connection. Patient Registration data is saved locally </string>
    <string name="activity_sync_after_connection">and will sync when internet connection is restored. </string>
    <string name="form_error">This form is not supported</string>
    <string name="active_visit_label">Active visit</string>
    <string name="past_visit_label">Past visit</string>
    <string name="visit_in">in %1$s</string>
    <string name="last_vitals_label">Last Vitals: </string>
    <string name="last_vitals_none_label">None</string>
    <string name="empty_diagnoses_list">Patient has no diagnoses yet.</string>
    <string name="diagnosis_note_label">Text of encounter note</string>
    <string name="list_vital_selector_show">show chart</string>
    <string name="list_vital_selector_hide">hide chart</string>
    <string name="no_vitals_recorded">No vitals recorded</string>
    <string name="action_end_visit">End Visit</string>
    <string name="visit_dashboard_label">Encounters</string>
    <string name="list_visit_selector_show">show details</string>
    <string name="list_visit_selector_hide">hide details</string>
    <string name="visit_exp_list_empty">Visit has no encounters yet.</string>
    <string name="visit_fetching_error">Error with fetching the visit</string>
    <string name="visit_ending_not_online_error">Cannot end visit without internet connection or in offline mode</string>
    <string name="visit_ending_error">Error ending this visit</string>
    <string name="patient_not_yet_registered">Patient not yet registered, cannot create encounter.</string>
    <string name="action_delete_patient">Delete Patient</string>
    <string name="action_register_patient">Register Patient</string>
    <string name="failed_to_open_vitals_form">An error occurred. Invalid or corrupted form file.</string>
    <string name="active_visit_label_capture_vitals">On Visit</string>
    <string name="empty_visits_list">Patient has no visits yet.</string>
    <string name="title_activity_form_create">FormCreateActivity</string>
</resources>