<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/findPatientsCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/learnMoreCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activeVisitsCardView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="12dp"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <RelativeLayout
                android:id="@+id/findPatientView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/findPatientButton"
                    android:layout_width="@dimen/dashboard_icon_height_width"
                    android:layout_height="@dimen/dashboard_icon_height_width"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/dashboard_icon_margin"
                    android:contentDescription="@string/dashboard_search_icon_label" />

                <TextView
                    android:id="@+id/findPatientLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/findPatientButton"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dashboard_text_top_margin"
                    android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                    android:text="@string/dashboard_search_icon_label"
                    android:textSize="@dimen/dashboard_text_size" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/activeVisitsCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            app:layout_constraintEnd_toStartOf="@+id/findPatientsCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/activeVisitsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/activeVisitsButton"
                    android:layout_width="@dimen/dashboard_icon_height_width"
                    android:layout_height="@dimen/dashboard_icon_height_width"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/dashboard_icon_margin"
                    android:layout_marginTop="@dimen/dashboard_icon_margin"
                    android:layout_marginEnd="@dimen/dashboard_icon_margin"
                    android:layout_marginBottom="@dimen/dashboard_icon_margin"
                    android:contentDescription="@string/dashboard_patient_message" />

                <TextView
                    android:id="@+id/activeVisitsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activeVisitsButton"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dashboard_text_top_margin"
                    android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                    android:text="Start Assessment"
                    android:textSize="@dimen/dashboard_text_size" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/registerPatientCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            app:layout_constraintEnd_toStartOf="@+id/learnMoreCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findPatientsCardView">

            <RelativeLayout
                android:id="@+id/registryPatientView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/registryPatientButton"
                    android:layout_width="@dimen/dashboard_icon_height_width"
                    android:layout_height="@dimen/dashboard_icon_height_width"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/dashboard_icon_margin"
                    android:layout_marginTop="@dimen/dashboard_icon_margin"
                    android:layout_marginEnd="@dimen/dashboard_icon_margin"
                    android:layout_marginBottom="@dimen/dashboard_icon_margin"
                    android:contentDescription="@string/dashboard_registry_icon_label" />

                <TextView
                    android:id="@+id/registryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/registryPatientButton"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dashboard_text_top_margin"
                    android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                    android:text="@string/action_register_patient"
                    android:textSize="@dimen/dashboard_text_size" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/learnMoreCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerPatientCardView"
            app:layout_constraintTop_toBottomOf="@+id/findPatientsCardView"
            android:layout_marginTop="16dp"
            android:layout_marginRight="12dp">

            <RelativeLayout
                android:id="@+id/learnMoreView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/learnMoreButton"
                    android:layout_width="@dimen/dashboard_icon_height_width"
                    android:layout_height="@dimen/dashboard_icon_height_width"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/dashboard_icon_margin"
                    android:layout_marginTop="@dimen/dashboard_icon_margin"
                    android:layout_marginEnd="@dimen/dashboard_icon_margin"
                    android:layout_marginBottom="@dimen/dashboard_icon_margin"
                    android:contentDescription="@string/dashboard_learn_message" />

                <TextView
                    android:id="@+id/formsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/learnMoreButton"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dashboard_text_top_margin"
                    android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                    android:text="@string/dashboard_learn_message"
                    android:textSize="@dimen/dashboard_text_size" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learnMoreCardView">

            

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>